# filedash

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  LICENSE  README.md  build.sh  deploy.sh  docker-compose.yml  firebase.json
.github/workflows/: docker-build-push.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  rust-tests.yml
backend/: Cargo.toml  README.md  TESTING_STAGE1.md  TESTING_STAGE2.md  config.toml
backend/docs/: README.md
backend/docs/api/: README.md  authentication.md  error-handling.md  file-operations.md  rest-api.md  search.md
backend/docs/architecture/: README.md  overview.md
backend/docs/deployment/: docker.md
backend/docs/development/: setup.md  testing.md
backend/docs/security/: overview.md
backend/files/: welcome.txt
backend/files/documents/: frontend_test.txt  sample.md
backend/src/: lib.rs  main.rs
backend/src/api/: auth.rs  files.rs  mod.rs  search.rs
backend/src/config/: mod.rs  settings.rs
backend/src/db/: migrations.rs  mod.rs  models.rs
backend/src/errors/: api_error.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/services/: auth_service.rs  file_service.rs  mod.rs  search_service.rs
backend/src/utils/: mod.rs  security.rs
backend/test_files/: document.txt  file1.txt  file2.txt  test_data.txt  upload_test.txt
backend/tests/: README.md  api_tests.rs  test_helpers.rs
backend/tests/config/: test_config.toml
frontend/: README.md  UPLOAD_IMPROVEMENTS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
(+42 files in other folders)
